Closed Bug 1658005 Opened 4 years ago Closed 4 years ago

Intermittent Android <test-name> | application crashed | application crashed [@ mozilla::wr::RenderAndroidSurfaceTextureHostOGL::Lock(unsigned char, mozilla::gl::GLContext*, mozilla::wr::ImageRendering)]

Categories

(Core :: Graphics: WebRender, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
82 Branch
Tracking Status
firefox-esr68 --- unaffected
firefox-esr78 --- unaffected
firefox79 --- unaffected
firefox80 --- unaffected
firefox81 --- wontfix
firefox82 --- fixed

People

(Reporter: intermittent-bug-filer, Assigned: sotaro)

References

Details

(Keywords: crash, intermittent-failure, Whiteboard: [stockwell unknown])

Crash Data

Attachments

(1 file)

Filed by: apavel [at] mozilla.com
Parsed log: https://treeherder.mozilla.org/logviewer.html#?job_id=312422603&repo=autoland
Full log: https://firefox-ci-tc.services.mozilla.com/api/queue/v1/task/LHaAJyhARsmFuVnI5rXQww/runs/0/artifacts/public/logs/live_backing.log


[task 2020-08-07T17:52:03.367Z] 17:52:03 INFO - 121 INFO TEST-START | dom/media/test/test_background_video_no_suspend_disabled.html
[task 2020-08-07T17:52:34.796Z] 17:52:34 INFO - wait for org.mozilla.geckoview.test complete; top activity=com.android.launcher3
[task 2020-08-07T17:52:34.904Z] 17:52:34 INFO - remoteautomation.py | Application ran for: 0:01:19.636938
[task 2020-08-07T17:52:35.444Z] 17:52:35 INFO - mozcrash Copy/paste: /builds/worker/fetches/minidump_stackwalk/minidump_stackwalk /tmp/tmpY9A388/27b20034-84a6-4b25-3fd0-6e27ace8a718.dmp /builds/worker/workspace/build/symbols
[task 2020-08-07T17:52:39.957Z] 17:52:39 INFO - mozcrash Saved minidump as /builds/worker/workspace/build/blobber_upload_dir/27b20034-84a6-4b25-3fd0-6e27ace8a718.dmp
[task 2020-08-07T17:52:39.958Z] 17:52:39 INFO - mozcrash Saved app info as /builds/worker/workspace/build/blobber_upload_dir/27b20034-84a6-4b25-3fd0-6e27ace8a718.extra
[task 2020-08-07T17:52:39.967Z] 17:52:39 WARNING - PROCESS-CRASH | dom/media/test/test_background_video_no_suspend_disabled.html | application crashed [@ mozilla::wr::RenderAndroidSurfaceTextureHostOGL::Lock(unsigned char, mozilla::gl::GLContext*, mozilla::wr::ImageRendering)]
[task 2020-08-07T17:52:39.967Z] 17:52:39 INFO - Mozilla crash reason: MOZ_ASSERT((mPrepareStatus == STATUS_PREPARED) || (!mSurfTex->IsSingleBuffer() && mPrepareStatus == STATUS_UPDATE_TEX_IMAGE_NEEDED))
[task 2020-08-07T17:52:39.967Z] 17:52:39 INFO - Crash dump filename: /tmp/tmpY9A388/27b20034-84a6-4b25-3fd0-6e27ace8a718.dmp
[task 2020-08-07T17:52:39.967Z] 17:52:39 INFO - Operating system: Android
[task 2020-08-07T17:52:39.967Z] 17:52:39 INFO - 0.0.0 Linux 3.10.0+ #260 SMP PREEMPT Fri May 19 12:48:14 PDT 2017 x86_64
[task 2020-08-07T17:52:39.967Z] 17:52:39 INFO - CPU: amd64
[task 2020-08-07T17:52:39.967Z] 17:52:39 INFO - family 6 model 6 stepping 3
[task 2020-08-07T17:52:39.967Z] 17:52:39 INFO - 4 CPUs
[task 2020-08-07T17:52:39.967Z] 17:52:39 INFO - GPU: UNKNOWN
[task 2020-08-07T17:52:39.968Z] 17:52:39 INFO - Crash reason: SIGSEGV /SEGV_MAPERR
[task 2020-08-07T17:52:39.968Z] 17:52:39 INFO - Crash address: 0x0
[task 2020-08-07T17:52:39.968Z] 17:52:39 INFO - Process uptime: not available
[task 2020-08-07T17:52:39.968Z] 17:52:39 INFO - Thread 42 (crashed)
[task 2020-08-07T17:52:39.968Z] 17:52:39 INFO - 0 libxul.so!mozilla::wr::RenderAndroidSurfaceTextureHostOGL::Lock(unsigned char, mozilla::gl::GLContext*, mozilla::wr::ImageRendering) [RenderAndroidSurfaceTextureHostOGL.cpp:768023eab2270602610ef80988e29773f52d1be8 : 58 + 0x29]
[task 2020-08-07T17:52:39.968Z] 17:52:39 INFO - rax = 0x0000771179265598 rdx = 0x0000000000000004
[task 2020-08-07T17:52:39.968Z] 17:52:39 INFO - rcx = 0x000077117c2b1808 rbx = 0x00007711652cc000
[task 2020-08-07T17:52:39.968Z] 17:52:39 INFO - rsi = 0x000077116394c7d0 rdi = 0x000000000000001b
[task 2020-08-07T17:52:39.968Z] 17:52:39 INFO - rbp = 0x000077116394d940 rsp = 0x000077116394d8f0
[task 2020-08-07T17:52:39.968Z] 17:52:39 INFO - r8 = 0x000000000000ffff r9 = 0x0000000000000000
[task 2020-08-07T17:52:39.968Z] 17:52:39 INFO - r10 = 0x0000771196e493d0 r11 = 0x0000000000000246
[task 2020-08-07T17:52:39.968Z] 17:52:39 INFO - r12 = 0x000077115d12aa80 r13 = 0x0000771164e02600
[task 2020-08-07T17:52:39.968Z] 17:52:39 INFO - r14 = 0x000077116394d9a0 r15 = 0x0000000000000000
[task 2020-08-07T17:52:39.968Z] 17:52:39 INFO - rip = 0x0000771171edcc90
[task 2020-08-07T17:52:39.969Z] 17:52:39 INFO - Found by: given as instruction pointer in context
[task 2020-08-07T17:52:39.969Z] 17:52:39 INFO - 1 libxul.so!wr_renderer_lock_external_image [RendererOGL.cpp:768023eab2270602610ef80988e29773f52d1be8 : 36 + 0x2d]
[task 2020-08-07T17:52:39.969Z] 17:52:39 INFO - rbp = 0x000077116394d980 rsp = 0x000077116394d950
[task 2020-08-07T17:52:39.969Z] 17:52:39 INFO - rip = 0x0000771171eeaabc
[task 2020-08-07T17:52:39.969Z] 17:52:39 INFO - Found by: previous frame's frame pointer
[task 2020-08-07T17:52:39.969Z] 17:52:39 INFO - 2 libxul.so!<webrender_bindings::bindings::WrExternalImageHandler as webrender_api::image::ExternalImageHandler>::lock [bindings.rs:768023eab2270602610ef80988e29773f52d1be8 : 418 + 0x14]
[task 2020-08-07T17:52:39.969Z] 17:52:39 INFO - rbp = 0x000077116394d9d0 rsp = 0x000077116394d990
[task 2020-08-07T17:52:39.969Z] 17:52:39 INFO - rip = 0x00007711772d70c0
[task 2020-08-07T17:52:39.969Z] 17:52:39 INFO - Found by: previous frame's frame pointer
[task 2020-08-07T17:52:39.969Z] 17:52:39 INFO - 3 libxul.so!webrender::renderer::Renderer::render_impl [renderer.rs:768023eab2270602610ef80988e29773f52d1be8 : 3485 + 0x11da]
[task 2020-08-07T17:52:39.969Z] 17:52:39 INFO - rbp = 0x000077116394ea80 rsp = 0x000077116394d9e0
[task 2020-08-07T17:52:39.969Z] 17:52:39 INFO - rip = 0x0000771177494a6a
[task 2020-08-07T17:52:39.970Z] 17:52:39 INFO - Found by: previous frame's frame pointer
[task 2020-08-07T17:52:39.970Z] 17:52:39 INFO - 4 libxul.so!webrender::renderer::Renderer::render [renderer.rs:768023eab2270602610ef80988e29773f52d1be8 : 3262 + 0x1b]
[task 2020-08-07T17:52:39.970Z] 17:52:39 INFO - rbp = 0x000077116394eb60 rsp = 0x000077116394ea90
[task 2020-08-07T17:52:39.970Z] 17:52:39 INFO - rip = 0x0000771177492d76
[task 2020-08-07T17:52:39.970Z] 17:52:39 INFO - Found by: previous frame's frame pointer
[task 2020-08-07T17:52:39.970Z] 17:52:39 INFO - 5 libxul.so!wr_renderer_render [bindings.rs:768023eab2270602610ef80988e29773f52d1be8 : 609 + 0x19]
[task 2020-08-07T17:52:39.970Z] 17:52:39 INFO - rbp = 0x000077116394ed30 rsp = 0x000077116394eb70
[task 2020-08-07T17:52:39.970Z] 17:52:39 INFO - rip = 0x00007711772d73e6
[task 2020-08-07T17:52:39.970Z] 17:52:39 INFO - Found by: previous frame's frame pointer
[task 2020-08-07T17:52:39.970Z] 17:52:39 INFO - 6 libxul.so!mozilla::wr::RendererOGL::UpdateAndRender(mozilla::Maybe<mozilla::gfx::IntSizeTyped<mozilla::gfx::UnknownUnits> > const&, mozilla::Maybe<mozilla::wr::ImageFormat> const&, mozilla::Maybe<mozilla::Range<unsigned char> > const&, mozilla::wr::RendererStats*) [RendererOGL.cpp:768023eab2270602610ef80988e29773f52d1be8 : 142 + 0x15]
[task 2020-08-07T17:52:39.970Z] 17:52:39 INFO - rbp = 0x000077116394edb0 rsp = 0x000077116394ed40
[task 2020-08-07T17:52:39.970Z] 17:52:39 INFO - rip = 0x0000771171ee6e6f
[task 2020-08-07T17:52:39.971Z] 17:52:39 INFO - Found by: previous frame's frame pointer
[task 2020-08-07T17:52:39.971Z] 17:52:39 INFO - 7 libxul.so!mozilla::wr::RenderThread::UpdateAndRender(mozilla::wr::WrWindowId, mozilla::layers::BaseTransactionId<mozilla::VsyncIdType> const&, mozilla::TimeStamp const&, bool, mozilla::Maybe<mozilla::gfx::IntSizeTyped<mozilla::gfx::UnknownUnits> > const&, mozilla::Maybe<mozilla::wr::ImageFormat> const&, mozilla::Maybe<mozilla::Range<unsigned char> > const&) [RenderThread.cpp:768023eab2270602610ef80988e29773f52d1be8 : 481 + 0xd]
[task 2020-08-07T17:52:39.971Z] 17:52:39 INFO - rbp = 0x000077116394eef0 rsp = 0x000077116394edc0
[task 2020-08-07T17:52:39.971Z] 17:52:39 INFO - rip = 0x0000771171ee6148
[task 2020-08-07T17:52:39.971Z] 17:52:39 INFO - Found by: previous frame's frame pointer
[task 2020-08-07T17:52:39.971Z] 17:52:39 INFO - 8 libxul.so!mozilla::wr::RenderThread::HandleFrameOneDoc(mozilla::wr::WrWindowId, bool) [RenderThread.cpp:768023eab2270602610ef80988e29773f52d1be8 : 359 + 0x1d]
[task 2020-08-07T17:52:39.971Z] 17:52:39 INFO - rbp = 0x000077116394efc0 rsp = 0x000077116394ef00
[task 2020-08-07T17:52:39.971Z] 17:52:39 INFO - rip = 0x0000771171ee5c7b
[task 2020-08-07T17:52:39.971Z] 17:52:39 INFO - Found by: previous frame's frame pointer
[task 2020-08-07T17:52:39.972Z] 17:52:39 INFO - 9 libxul.so!mozilla::detail::RunnableMethodImpl<mozilla::wr::RenderThread*, void (mozilla::wr::RenderThread::)(mozilla::wr::WrWindowId, bool), true, (mozilla::RunnableKind)0, mozilla::wr::WrWindowId, bool>::Run() [nsThreadUtils.h:768023eab2270602610ef80988e29773f52d1be8 : 1240 + 0x1f]
[task 2020-08-07T17:52:39.972Z] 17:52:39 INFO - rbp = 0x000077116394efd0 rsp = 0x000077116394efd0
[task 2020-08-07T17:52:39.972Z] 17:52:39 INFO - rip = 0x0000771171eeea3f
[task 2020-08-07T17:52:39.972Z] 17:52:39 INFO - Found by: previous frame's frame pointer
[task 2020-08-07T17:52:39.972Z] 17:52:39 INFO - 10 libxul.so!MessageLoop::RunTask(already_AddRefed<nsIRunnable>) [message_loop.cc:768023eab2270602610ef80988e29773f52d1be8 : 465 + 0xf]
[task 2020-08-07T17:52:39.972Z] 17:52:39 INFO - rbp = 0x000077116394f030 rsp = 0x000077116394efe0
[task 2020-08-07T17:52:39.972Z] 17:52:39 INFO - rip = 0x00007711711ff650
[task 2020-08-07T17:52:39.972Z] 17:52:39 INFO - Found by: previous frame's frame pointer
[task 2020-08-07T17:52:39.972Z] 17:52:39 INFO - 11 libxul.so!MessageLoop::DeferOrRunPendingTask(MessageLoop::PendingTask&&) [message_loop.cc:768023eab2270602610ef80988e29773f52d1be8 : 473 + 0x2e]
[task 2020-08-07T17:52:39.972Z] 17:52:39 INFO - rbp = 0x000077116394f060 rsp = 0x000077116394f040
[task 2020-08-07T17:52:39.972Z] 17:52:39 INFO - rip = 0x00007711712000df
[task 2020-08-07T17:52:39.972Z] 17:52:39 INFO - Found by: previous frame's frame pointer
[task 2020-08-07T17:52:39.972Z] 17:52:39 INFO - 12 libxul.so!MessageLoop::DoWork() [message_loop.cc:768023eab2270602610ef80988e29773f52d1be8 : 548 + 0xb]
[task 2020-08-07T17:52:39.973Z] 17:52:39 INFO - rbp = 0x000077116394f0c0 rsp = 0x000077116394f070
[task 2020-08-07T17:52:39.973Z] 17:52:39 INFO - rip = 0x000077117120042b
[task 2020-08-07T17:52:39.973Z] 17:52:39 INFO - Found by: previous frame's frame pointer
[task 2020-08-07T17:52:39.973Z] 17:52:39 INFO - 13 libxul.so!base::MessagePumpDefault::Run(base::MessagePump::Delegate
) [message_pump_default.cc:768023eab2270602610ef80988e29773f52d1be8 : 35 + 0x9]
[task 2020-08-07T17:52:39.973Z] 17:52:39 INFO - rbp = 0x000077116394f140 rsp = 0x000077116394f0d0
[task 2020-08-07T17:52:39.973Z] 17:52:39 INFO - rip = 0x0000771171201081
[task 2020-08-07T17:52:39.973Z] 17:52:39 INFO - Found by: previous frame's frame pointer
[task 2020-08-07T17:52:39.973Z] 17:52:39 INFO - 14 libxul.so!MessageLoop::RunInternal() [message_loop.cc:768023eab2270602610ef80988e29773f52d1be8 : 334 + 0x14]
[task 2020-08-07T17:52:39.973Z] 17:52:39 INFO - rbp = 0x000077116394f190 rsp = 0x000077116394f150
[task 2020-08-07T17:52:39.973Z] 17:52:39 INFO - rip = 0x00007711711ff2f4
[task 2020-08-07T17:52:39.973Z] 17:52:39 INFO - Found by: previous frame's frame pointer
[task 2020-08-07T17:52:39.973Z] 17:52:39 INFO - 15 libxul.so!MessageLoop::Run() [message_loop.cc:768023eab2270602610ef80988e29773f52d1be8 : 309 + 0x5]
[task 2020-08-07T17:52:39.973Z] 17:52:39 INFO - rbp = 0x000077116394f1c0 rsp = 0x000077116394f1a0
[task 2020-08-07T17:52:39.973Z] 17:52:39 INFO - rip = 0x00007711711ff20e
[task 2020-08-07T17:52:39.973Z] 17:52:39 INFO - Found by: previous frame's frame pointer
[task 2020-08-07T17:52:39.974Z] 17:52:39 INFO - 16 libxul.so!base::Thread::ThreadMain() [thread.cc:768023eab2270602610ef80988e29773f52d1be8 : 192 + 0x8]
[task 2020-08-07T17:52:39.974Z] 17:52:39 INFO - rbp = 0x000077116394f3d0 rsp = 0x000077116394f1d0
[task 2020-08-07T17:52:39.974Z] 17:52:39 INFO - rip = 0x000077117120d36d
[task 2020-08-07T17:52:39.974Z] 17:52:39 INFO - Found by: previous frame's frame pointer
[task 2020-08-07T17:52:39.974Z] 17:52:39 INFO - 17 libxul.so!ThreadFunc(void*) [platform_thread_posix.cc:768023eab2270602610ef80988e29773f52d1be8 : 40 + 0x6]
[task 2020-08-07T17:52:39.974Z] 17:52:39 INFO - rbp = 0x000077116394f3e0 rsp = 0x000077116394f3e0
[task 2020-08-07T17:52:39.974Z] 17:52:39 INFO - rip = 0x00007711712075fa
[task 2020-08-07T17:52:39.974Z] 17:52:39 INFO - Found by: previous frame's frame pointer
[task 2020-08-07T17:52:39.974Z] 17:52:39 INFO - 18 libc.so + 0x89772
[task 2020-08-07T17:52:39.974Z] 17:52:39 INFO - rsp = 0x000077116394f3f0 rip = 0x0000771196eab772
[task 2020-08-07T17:52:39.974Z] 17:52:39 INFO - Found by: stack scanning
[task 2020-08-07T17:52:39.974Z] 17:52:39 INFO - 19 libxul.so!std::__ndk1::__deque_base<MessageLoop::PendingTask, std::__ndk1::allocator<MessageLoop::PendingTask> >::clear() [deque : 1196 + 0xf]
[task 2020-08-07T17:52:39.974Z] 17:52:39 INFO - rsp = 0x000077116394f428 rip = 0x00007711712075f0
[task 2020-08-07T17:52:39.974Z] 17:52:39 INFO - Found by: stack scanning
[task 2020-08-07T17:52:39.975Z] 17:52:39 INFO - 20 libc.so + 0x299ec
[task 2020-08-07T17:52:39.975Z] 17:52:39 INFO - rsp = 0x000077116394f440 rip = 0x0000771196e4b9ec
[task 2020-08-07T17:52:39.975Z] 17:52:39 INFO - Found by: stack scanning
[task 2020-08-07T17:52:39.975Z] 17:52:39 INFO - 21 libc.so + 0x896c0
[task 2020-08-07T17:52:39.975Z] 17:52:39 INFO - rsp = 0x000077116394f448 rip = 0x0000771196eab6c0
[task 2020-08-07T17:52:39.975Z] 17:52:39 INFO - Found by: stack scanning
[task 2020-08-07T17:52:39.975Z] 17:52:39 INFO - 22 libc.so + 0x1ca66
[task 2020-08-07T17:52:39.975Z] 17:52:39 INFO - rsp = 0x000077116394f450 rip = 0x0000771196e3ea66
[task 2020-08-07T17:52:39.975Z] 17:52:39 INFO - Found by: stack scanning
[task 2020-08-07T17:52:39.975Z] 17:52:39 INFO - 23 libxul.so!std::__ndk1::__deque_base<MessageLoop::PendingTask, std::__ndk1::allocator<MessageLoop::PendingTask> >::clear() [deque : 1196 + 0xf]
[task 2020-08-07T17:52:39.975Z] 17:52:39 INFO - rsp = 0x000077116394f4b8 rip = 0x00007711712075f0
[task 2020-08-07T17:52:39.975Z] 17:52:39 INFO - Found by: stack scanning

Transferring needinfo from bug 1606549.

Sotaro, the crash in Lock() occurs because mPrepareStatus == STATUS_MIGHT_BE_USED_BY_WR. This is because NofityForUse() has not been called before Lock(). Do you know why that might be happening?

Flags: needinfo?(sotaro.ikeda.g)
Assignee: nobody → sotaro.ikeda.g

The following functions are asynchronously called by a bit different ways. It seems not good. It seems better to unify them.

  • PrepareForUse()
  • NofityForUse()
  • NotifyNotUsed()
Pushed by sikeda.birchill@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/60bb188712e4
Unify RenderTextureHost async function calls r=nical,jnicol
Status: NEW → RESOLVED
Closed: 4 years ago
Resolution: --- → FIXED
Target Milestone: --- → 82 Branch

Is there a user impact which justifies backport consideration (we do ship WR on Android to a few devices) or can this ride the trains?

This can ride the trains, it might cause frame dropping during video playback. But video frame drop could happen at other places, even with this fix.

Flags: needinfo?(sotaro.ikeda.g)
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: